* Gutenberg: Adding Embed block styles * Gutenberg: Adding Gallery block styles * Gutenberg: Adding Video block styles * Gutenberg: Updating Table, Cover and Audio block styles * Updating `haf()` mixin to include `:visited` state * Updating alignment styles * Fixing `<pre>` tag styles

--- a/starter/base/_base.scss
+++ b/starter/base/_base.scss
@@ -172,7 +172,7 @@
 		position: relative;
 		max-width: 100%;
 		padding: 1em;
-		margin-bottom: $golden +em;
+		margin: 0 0 ( $golden +em );
 		overflow: auto;
 		tab-size: 2;
 	}
