--- a/starter/content/wp/blocks/__table.scss
+++ b/starter/content/wp/blocks/__table.scss
@@ -12,6 +12,11 @@
 
 	.wp-block-table {
 
+		&.alignleft,
+		&.alignright {
+			max-width: $horizontal_alignment_width;
+		}
+
 		&.is-style-stripes {
 			border-top: 2px solid;
 			border-bottom: 2px solid;
